Fixing that differ didn't work with java11